# peegee-cache-api/src/main/java/dev/mars/peegeeq/cache/api/management/ManagementAuditAction.java
@@ -15,6 +15,7 @@ public enum ManagementAuditAction {
     DELETE_ENTRY,
     BATCH_GET_ENTRIES,
     BATCH_SET_ENTRIES,
+    BATCH_DELETE_ENTRIES,
     SCAN_ENTRY_VALUES,
     SET_COUNTER,
     ADJUST_COUNTER,
